Reconfiguration changes crash during File Copy Based Initial Sync

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.2.0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Replication 2021-11-15
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The opCtx for configuration changes crashes on interruption (either regular or storage change); this can cause a crash during storage change.

      Additionally, we need to ensure the storage change is propagated to the new set of files; there is a small race where the new one might be written out while the old one is in memory, so we write the old one to the new set of files and end up out of sync.

            Assignee:
            Matthew Russotto (Inactive)
            Reporter:
            Matthew Russotto (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: