SERVER-61213 Reconfiguration changes crash during File Copy Based Initial Sync