src/mongo/db/repl/data_replicator_external_state_mock.h
@@ -70,6 +70,10 @@ public:
 
     StatusWith<ReplSetConfig> getCurrentConfig() const override;
 
+    StatusWith<BSONObj> loadLocalConfigDocument(OperationContext* opCtx) const override;
+
+    Status storeLocalConfigDocument(OperationContext* opCtx, const BSONObj& config) override;
+
     // Task executor.
     std::shared_ptr<executor::TaskExecutor> taskExecutor = nullptr;
 
